src/test/deca/context/invalid/created/objet/new.deca
// Description :
//      test de verification de l'affectation de classe avec extends
// Resultats :
//      Ligne 16 : affectation incompatible

class A {
}

class B extends A {
}
class C extends B {
}

{

    C b = new A();  
}